--- a/src/html/layout/_main.html
+++ b/src/html/layout/_main.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Test page</title>
   <link rel="stylesheet" href="/css/main.css">
+  <script src="https://use.fontawesome.com/52ce2ee9ea.js"></script>
 </head>
 <body>
   {% include 'shared/_header.html' %}
