--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,18 +6,13 @@
 // Base
 @import './base/variables';
 @import './base/mixins';
-@import './base/base';
 @import './base/grid';
 
 // Modules
-@import './modules/typography';
-@import './modules/buttons';
-@import './modules/labels';
-@import './modules/form';
-@import './modules/card';
-@import './modules/table';
+@import './modules/header';
 @import './modules/link';
-@import './modules/list';
-@import './modules/dropdown';
-
-@import './modules/test';
+@import './modules/form';
+@import './modules/media';
+@import './modules/video';
+@import './modules/product';
+@import './modules/footer';
