--- a/src/scss/modules/_form.scss
+++ b/src/scss/modules/_form.scss
@@ -1,99 +1,44 @@
-.field + .field {
-  margin-top: 16px;
+form {
+  margin-top: 100px;
+  text-align: center;
+
+  @include mediaquery--sm {
+    margin-top: 125px;
+  }
 }
 
-.form-label {
+h3 {
+  font-size: $font-size-lg;
+  margin-bottom: 20px;
+  font-weight: 550;
+}
+
+.control {
+  box-sizing: border-box;
+  width: 250px;
+  margin: 0 auto;
+}
+
+input {
+  width: 250px;
+  max-width: 100%;
+  font-size: $font-size-sm;
   display: block;
-  margin-bottom: 4px;
-  font-size: 14px;
-  font-weight: $font-weight-light-bold;
-  line-height: $line-height-zero;
+  margin-bottom: 15px;
 }
 
-.form-input {
-  display: block;
-  width: 100%;
-  height: 40px;
-  padding: 4px 8px;
-  -webkit-appearance: none;
-  font-size: $font-size-base;
-  line-height: 40px;
-  border: 1px solid $gray-color;
-  border-radius: $radius;
-  outline: 0;
-  transition: .3s all ease;
+button {
+  background-color: yellow;
+  border: none;
+  border-radius: 5px;
+  height: 30px;
+  width: 120px;
+  box-sizing: border-box;
+  font-weight: 900;
+  font-size: $font-size-sm;
 
-  &:focus {
-    border: 1px solid lighten($primary-color, .3);
-  }
-}
-
-input[type='radio'],
-input[type='checkbox'] {
-  display: none;
-}
-
-.form-radio,
-.form-checkbox {
-  display: inline-block;
-  padding-left: 20px;
-  font-size: $font-size-base;
-  position: relative;
-  cursor: pointer;
-
-  input[type='radio'] + span,
-  input[type='checkbox'] + span {
-    @include centered(0, 50%);
-    width: 16px;
-    height: 16px;
-    border: 1px solid $dark-color;
-
-    &:after {
-      content: '';
-      visibility: hidden;
-      opacity: 0;
-      transition: .3s all ease;
-    }
-  }
-
-  input[type='radio']:checked + span,
-  input[type='checkbox']:checked + span {
-    border: 1px solid $primary-color;
-
-    &:after {
-      visibility: visible;
-      opacity: 1;
-    }
-  }
-}
-
-.form-radio {
-  + .form-radio {
-    margin-left: 8px;
-  }
-
-  input[type='radio'] + span {
-    border-radius: $radius-circle;
-
-    &:after {
-      @include centered(50%, 50%);
-      width: 8px;
-      height: 8px;
-      background-color: $primary-color;
-      border-radius: $radius-circle;
-    }
-  }
-}
-
-.form-checkbox {
-  input[type='checkbox'] + span:after {
-    width: 8px;
-    height: 10px;
-    border-bottom: 2px solid $primary-color;
-    border-right: 2px solid $primary-color;
-    position: absolute;
-    left: 3px;
-    bottom: 3px;
-    transform: rotate(45deg);
+  &:hover {
+    background-color: yellowgreen;
+    transition: 3s;
   }
 }
